--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "vite_react_shadcn_ts",
   "private": true,
+  "homepage": "https://alphapebble.github.io",
+  "author": "AlphaPebble",
+  "license": "MIT",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -8,7 +11,8 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
