--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "rss": "^1.2.2",
+    "sharp": "^0.34.3",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
