--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev-turbo": "next dev --turbopack",
+    "build-turbo": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "eslint"
   },
