--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lighthouse": "lhci autorun"
   },
   "dependencies": {
+    "@next/mdx": "^15.5.3",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "gray-matter": "^4.0.3",
@@ -26,6 +27,8 @@
     "plaiceholder": "^3.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
     "rss": "^1.2.2",
     "sharp": "^0.34.3",
     "zustand": "^5.0.8"
