--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,5 +1,5 @@
 {
-  "name": "alphapebble.io",
+  "name": "alphapebble",
   "compatibility_date": "2025-09-21",
   "compatibility_flags": ["nodejs_compat"],
   "pages_build_output_dir": "./out"
