--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,3 +2,9 @@ name = "alphapebble"
 main = "src/index.ts"
 compatibility_date = "2025-09-21"
 compatibility_flags = ["nodejs_compat"]
+
+[site]
+bucket = "./out"   # <- static assets folder to be uploaded with the Worker
+
+# Optional: attach to a domain/route
+# routes = [{ pattern = "alphapebble.io/*", zone_name = "alphapebble.io" }]
