--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
+    "build:worker": "next build && opennext build --platform=cloudflare",
+    "deploy": "wrangler deploy",
+    "dev:worker": "wrangler dev --local",
     "start": "next start",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
@@ -36,6 +39,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@lhci/cli": "^0.12.0",
+    "@opennextjs/cloudflare": "^1.8.3",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
     "@types/aos": "^3.0.7",
@@ -50,6 +54,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.38.0"
   }
 }
