update for cloudfare

--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,20 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Next.js build output
+.next/
+out/
+
+# OpenNext build output
+.open-next/
+
+# Wrangler cache/logs
+.wrangler/
+
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
