--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,6 +2,8 @@ name = "alphapebble"
 main = ".open-next/worker.js"
 compatibility_date = "2025-09-22"
 compatibility_flags = ["nodejs_compat"]
+assets = { directory = ".open-next/assets" }
+
 
 # Static assets produced by OpenNext
 assets = { directory = ".open-next/assets" }
