--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,9 +2,7 @@ name = "alphapebble"
 main = ".open-next/worker.js"
 compatibility_date = "2025-09-22"
 compatibility_flags = ["nodejs_compat"]
-
-# keep ONLY this, delete any [site] block
 assets = { directory = ".open-next/assets" }
 
-# Optional domain binding
-# routes = [{ pattern = "alphapebble.io/*", zone_name = "alphapebble.io" }]
+[vars]
+OPENNEXT_SERVER_WORKING_DIRECTORY = ".open-next/server-functions/default"
