on more try with route

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "build": "next build",
     "build:worker": "npm run build && npx @opennextjs/cloudflare build",
-
-    "predev": "node -e \"const p=require('node:path'); const fs=require('node:fs'); fs.writeFileSync('.dev.vars', 'OPENNEXT_SERVER_WORKING_DIRECTORY='+p.resolve('.open-next/server-functions/default')+'\\n');\" && npx @opennextjs/cloudflare build",
+    
+    "predev": "node -e \"const p=require('node:path'); const fs=require('node:fs'); fs.writeFileSync('.dev.vars', 'OPENNEXT_SERVER_WORKING_DIRECTORY='+p.resolve('.open-next/server-functions/default')+'\\n');\" && npm run build:worker",
     "dev": "wrangler dev .open-next/worker.js --assets .open-next/assets",
-
-    "predeploy": "npm run build:worker",
+    
     "deploy": "wrangler deploy",
-
+    "preview": "npm run build:worker && wrangler dev",
+    
     "start": "next start",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
