--- a/package.json
+++ b/package.json
@@ -2,30 +2,31 @@
   "name": "alphapebble",
   "version": "0.1.0",
   "private": true,
+  "main": ".open-next/worker.js",
   "scripts": {
-      "build": "next build",
-      "postbuild": "npx @opennextjs/cloudflare build",
+    "build": "next build",
+    "postbuild": "npx @opennextjs/cloudflare build --skip-build",
 
-      "build:worker": "next build && npx @opennextjs/cloudflare build",
+    "build:worker": "next build && npx @opennextjs/cloudflare build --skip-build",
 
-      "predev": "node -e \"const p=require('node:path'); const fs=require('node:fs'); fs.writeFileSync('.dev.vars', 'OPENNEXT_SERVER_WORKING_DIRECTORY='+p.resolve('.open-next/server-functions/default')+'\\n');\" && npm run build:worker",
-      "dev": "wrangler dev .open-next/worker.js --assets .open-next/assets",
+    "predev": "node -e \"const p=require('node:path'); const fs=require('node:fs'); fs.writeFileSync('.dev.vars', 'OPENNEXT_SERVER_WORKING_DIRECTORY='+p.resolve('.open-next/server-functions/default')+'\\n');\" && npm run build:worker",
+    "dev": "wrangler dev .open-next/worker.js --assets .open-next/assets",
 
-      "deploy": "wrangler deploy",
-      "preview": "npm run build:worker && wrangler dev",
+    "deploy": "wrangler deploy",
+    "preview": "npm run build:worker && wrangler dev",
 
-      "start": "next start",
-      "lint": "eslint",
-      "lint:fix": "eslint --fix",
-      "type-check": "tsc --noEmit",
-      "security:audit": "npm audit --audit-level=moderate",
-      "security:fix": "npm audit fix",
-      "security:check": "npx audit-ci --moderate",
-      "format": "prettier --write .",
-      "format:check": "prettier --check .",
-      "analyze": "cross-env ANALYZE=true npm run build",
-      "lighthouse": "lhci autorun"
-  },
+    "start": "next start",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
+    "type-check": "tsc --noEmit",
+    "security:audit": "npm audit --audit-level=moderate",
+    "security:fix": "npm audit fix",
+    "security:check": "npx audit-ci --moderate",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "analyze": "cross-env ANALYZE=true npm run build",
+    "lighthouse": "lhci autorun"
+ },
   "dependencies": {
     "@next/mdx": "^15.5.3",
     "aos": "^2.3.4",
