--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,5 +7,5 @@ assets = { directory = ".open-next/assets" }
 
 # Add this block once you know the expected binding name:
 [[r2_buckets]]
-binding = "OPENNEXT_CACHE_BUCKET"   # <-- use the exact name the error/logs mention
+binding = "OPENNEXT_CACHE_BUCKET"
 bucket_name = "alphapebble-opennext-cache"
