--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,11 +1,17 @@
-# wrangler.toml
 name = "alphapebble"
 main = ".open-next/worker.js"
 compatibility_date = "2024-11-06"
 compatibility_flags = ["nodejs_compat"]
 assets = { directory = ".open-next/assets" }
 
-# Add this block once you know the expected binding name:
+# R2 for ISR (keep if you created the bucket)
 [[r2_buckets]]
 binding = "OPENNEXT_CACHE_BUCKET"
 bucket_name = "alphapebble-opennext-cache"
+
+# Route the Worker to your domain
+workers_dev = false
+routes = [
+  { pattern = "alphabble.io/*", zone_name = "alphabble.io" },
+  { pattern = "www.alphabble.io/*", zone_name = "alphabble.io" }
+]
