--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build-data": "node scripts/build-data.js",
+    "build:worker": "next build && node scripts/ensure-pages-manifest.js && node scripts/patch-standalone-node-mods.js && node scripts/remove-sharp.js && npx @opennextjs/cloudflare build --skip-build",
+    "predev": "node -e \"const p=require('node:path'); const fs=require('node:fs'); fs.writeFileSync('.dev.vars', 'OPENNEXT_SERVER_WORKING_DIRECTORY='+p.resolve('.open-next/server-functions/default')+'\\n');\" && npm run build:worker",
+    "dev": "wrangler dev .open-next/worker.js --assets .open-next/assets",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
@@ -18,21 +21,24 @@
     "lighthouse": "lhci autorun"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^15.5.4",
+    "@types/mdx": "^2.0.13",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "gray-matter": "^4.0.3",
     "next": "15.5.2",
     "next-mdx-remote": "^5.0.0",
-    "plaiceholder": "^3.0.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "rss": "^1.2.2",
-    "sharp": "^0.34.3",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@lhci/cli": "^0.12.0",
+    "@opennextjs/cloudflare": "^1.8.5",
     "@tailwindcss/postcss": "^4",
     "@tailwindcss/typography": "^0.5.16",
     "@types/aos": "^3.0.7",
@@ -47,6 +53,7 @@
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wrangler": "^4.39.0"
   }
 }
