--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
+    "open-next": "^3.1.3",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
