--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,16 +4,22 @@ compatibility_date = "2024-11-06"
 compatibility_flags = ["nodejs_compat"]
 
 # Static assets produced by OpenNext
-assets = { directory = ".open-next/assets" }
+[assets]
+directory = ".open-next/assets"
 
-# Attach routes to your domain (edit domain if needed)
+# Attach routes to your domain
 workers_dev = false
 routes = [
   { pattern = "alphapebble.io/*", zone_name = "alphapebble.io" },
   { pattern = "www.alphapebble.io/*", zone_name = "alphapebble.io" }
 ]
 
-# R2 binding for OpenNext ISR cache
+# R2 binding for OpenNext ISR incremental cache (correct binding name)
 [[r2_buckets]]
-binding = "OPENNEXT_CACHE_BUCKET"
+binding = "NEXT_INC_CACHE_R2_BUCKET"
 bucket_name = "alphapebble-opennext-cache"
+
+# Self-reference service binding (used by cache/revalidation components)
+[[services]]
+binding = "WORKER_SELF_REFERENCE"
+service = "alphapebble"
