--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build:worker": "next build && node scripts/ensure-pages-manifest.js && node scripts/patch-standalone-node-mods.js && node scripts/remove-sharp.js && npx @opennextjs/cloudflare build --skip-build",
     "predev": "node -e \"const p=require('node:path'); const fs=require('node:fs'); fs.writeFileSync('.dev.vars', 'OPENNEXT_SERVER_WORKING_DIRECTORY='+p.resolve('.open-next/server-functions/default')+'\\n');\" && npm run build:worker",
     "dev": "wrangler dev .open-next/worker.js --assets .open-next/assets",
-    "build": "next build",
+    "build": "next build && node scripts/ensure-pages-manifest.js && node scripts/patch-standalone-node-mods.js && node scripts/remove-sharp.js && npx @opennextjs/cloudflare build --skip-build",
+    "build:next-only": "next build",
     "start": "next start",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
