--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,6 +1,6 @@
 name = "alphapebble"
 main = ".open-next/worker.js"
-compatibility_date = "2024-11-06"
+compatibility_date = "2025-09-25"
 compatibility_flags = ["nodejs_compat"]
 
 # Static assets produced by OpenNext
@@ -8,18 +8,20 @@ compatibility_flags = ["nodejs_compat"]
 directory = ".open-next/assets"
 
 # Attach routes to your domain
-workers_dev = false
-routes = [
-  { pattern = "alphapebble.io/*", zone_name = "alphapebble.io" },
-  { pattern = "www.alphapebble.io/*", zone_name = "alphapebble.io" }
-]
+[[routes]]
+pattern = "alphapebble.io/*"
+zone_name = "alphapebble.io"
 
-# R2 binding for OpenNext ISR incremental cache (correct binding name)
+[[routes]]
+pattern = "www.alphapebble.io/*"
+zone_name = "alphapebble.io"
+
+# R2 binding for OpenNext ISR incremental cache
 [[r2_buckets]]
 binding = "NEXT_INC_CACHE_R2_BUCKET"
 bucket_name = "alphapebble-opennext-cache"
 
-# Self-reference service binding (used by cache/revalidation components)
+# Self-reference service binding
 [[services]]
 binding = "WORKER_SELF_REFERENCE"
 service = "alphapebble"
