--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "alphapebble",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "build-data": "node scripts/build-data.js",
-    "build:worker": "next build && node scripts/ensure-pages-manifest.js && node scripts/patch-standalone-node-mods.js && node scripts/remove-sharp.js && npx @opennextjs/cloudflare build --skip-build",
+    "build:worker": "next build && node scripts/ensure-pages-manifest.cjs && node scripts/patch-standalone-node-mods.js && node scripts/remove-sharp.js && npx @opennextjs/cloudflare build --skip-build",
     "predev": "node -e \"const p=require('node:path'); const fs=require('node:fs'); fs.writeFileSync('.dev.vars', 'OPENNEXT_SERVER_WORKING_DIRECTORY='+p.resolve('.open-next/server-functions/default')+'\\n');\" && npm run build:worker",
     "dev": "wrangler dev .open-next/worker.js --assets .open-next/assets",
-    "build": "next build && node scripts/ensure-pages-manifest.js && node scripts/patch-standalone-node-mods.js && node scripts/remove-sharp.js && npx @opennextjs/cloudflare build --skip-build",
+    "build": "npm run build-data && next build && node scripts/ensure-pages-manifest.cjs && node scripts/patch-standalone-node-mods.js && node scripts/remove-sharp.js && npx @opennextjs/cloudflare build --skip-build",
     "build:next-only": "next build",
     "start": "next start",
     "lint": "eslint",
@@ -54,8 +55,17 @@
     "open-next": "^3.1.3",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
+    "rehype-stringify": "^10.0.1",
+    "remark-breaks": "^4.0.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-parse": "^11.0.0",
+    "remark-rehype": "^11.1.2",
     "tailwindcss": "^4",
     "typescript": "^5",
-    "wrangler": "^4.39.0"
+    "unified": "^11.0.5",
+    "wrangler": "^4.40.1"
   }
 }
