--- a/package.json
+++ b/package.json
@@ -8,33 +8,32 @@
     "build:worker": "next build && node scripts/ensure-pages-manifest.cjs && node scripts/patch-standalone-node-mods.js && node scripts/remove-sharp.js && npx @opennextjs/cloudflare build --skip-build",
     "predev": "node -e \"const p=require('node:path'); const fs=require('node:fs'); fs.writeFileSync('.dev.vars', 'OPENNEXT_SERVER_WORKING_DIRECTORY='+p.resolve('.open-next/server-functions/default')+'\\n');\" && npm run build:worker",
     "dev": "wrangler dev .open-next/worker.js --assets .open-next/assets",
-    "dev:next": "next dev",
+    "dev:next": "next dev --turbopack",
     "build": "npm run build-data && next build && node scripts/ensure-pages-manifest.cjs && node scripts/patch-standalone-node-mods.js && node scripts/remove-sharp.js && npx @opennextjs/cloudflare build --skip-build",
-    "build:next-only": "next build",
+    "build:next": "next build --turbopack",
     "start": "next start",
     "deploy": "npm run build && wrangler deploy",
     "deploy:preview": "npm run build && wrangler deploy --env preview",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "type-check": "tsc --noEmit",
     "security:audit": "npm audit --audit-level=moderate",
     "security:fix": "npm audit fix",
     "security:check": "npx audit-ci --moderate",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "analyze": "cross-env ANALYZE=true npm run build:next-only",
+    "analyze": "cross-env ANALYZE=true npm run build:next",
     "lighthouse": "lhci autorun",
     "perf:analyze": "npm run analyze && npm run lighthouse",
-    "test:build": "npm run build:next-only && npm start",
-    "test:csp": "./scripts/test-csp.sh",
-    "test:legal": "./scripts/test-legal-pages.sh",
+    "test:build": "npm run build:next && npm start",
+    "test:csp": "bash scripts/test-csp.sh",
+    "test:legal": "bash scripts/test-legal-pages.sh",
     "clean": "rm -rf .next .open-next dist out"
   },
   "dependencies": {
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^15.5.4",
-    "@types/mdx": "^2.0.13",
     "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
     "gray-matter": "^4.0.3",
@@ -46,20 +45,21 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.0.0",
     "@lhci/cli": "^0.12.0",
     "@next/bundle-analyzer": "^15.5.5",
     "@opennextjs/cloudflare": "^1.8.5",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/aos": "^3.0.7",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^20.11.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "@types/rss": "^0.0.32",
     "audit-ci": "^7.0.1",
     "cross-env": "^7.0.3",
-    "eslint": "^9",
+    "eslint": "^9.13.0",
     "eslint-config-next": "15.5.2",
     "open-next": "^3.1.3",
     "prettier": "^3.6.2",
@@ -72,8 +72,8 @@
     "remark-gfm": "^4.0.1",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.1.2",
-    "tailwindcss": "^4",
-    "typescript": "^5",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.6.3",
     "unified": "^11.0.5",
     "wrangler": "^4.40.1"
   }
