Remove legacy security and analytics code, add PWA support
Deleted custom security headers, CSP config, web-vitals tracking, and related middleware and utility files. Updated Next.js config to inline CSP, add PWA support, and improve header management. Updated .gitignore and .prettierignore for new build artifacts. README now documents the new stack and workflow. Manifest moved to public and referenced as manifest.webmanifest. ESLint rule for explicit 'any' changed to warn. Various code and metadata cleanups for deployment on Cloudflare Pages.

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 # Dependencies
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # Testing
-/coverage
+coverage
 
 # Next.js
-/.next/
-/out/
+.next
+out
 
 # Production
-/build
-/.open-next
+build
+.open-next
 
 # Misc
 .DS_Store
@@ -24,31 +24,24 @@ yarn-debug.log*
 yarn-error.log*
 
 # Local env files
-.env*.local
 .env
-
-# Vercel
-.vercel
 
 # TypeScript
 *.tsbuildinfo
 next-env.d.ts
 
-# Wrangler
-.dev.vars
-
-# Generated data (regenerated on each build)
-/lib/generated/
-
 # IDE
-.vscode/
-.idea/
+.vscode
+.idea
+.vercel
+.dev.vars
+.lighthouseci
 
 # OS
 Thumbs.db
-
 .wrangler
 
 # Generated data files
-public/_data/
-lib/generated/
+public/rss.xml
+public/_data
+lib/generated
