--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,46 @@
-.next/
-node_modules/
-*.log
+# Dependencies
+node_modules
+.pnp
+.pnp.js
+
+# Testing
+coverage
+
+# Next.js
+.next
+out
+
+# Production
+build
+.open-next
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# IDE
+.vscode
+.idea
+.vercel
+.dev.vars
+.lighthouseci
+
+# OS
+Thumbs.db
+.wrangler
+
+# Generated data files
+public/_data
+lib/generated
