--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
     "@next/mdx": "^15.5.4",
-    "aos": "^2.3.4",
     "class-variance-authority": "^0.7.1",
+    "framer-motion": "^12.23.24",
     "gray-matter": "^4.0.3",
     "next": "15.5.2",
     "react": "19.1.0",
