--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "@next/mdx": "^15.5.4",
     "class-variance-authority": "^0.7.1",
     "framer-motion": "^12.23.24",
+    "geist": "^1.5.1",
     "gray-matter": "^4.0.3",
     "next": "15.5.2",
+    "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "rss": "^1.2.2",
