--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@next/mdx": "^15.5.4",
     "class-variance-authority": "^0.7.1",
+    "cmdk": "^1.1.1",
     "framer-motion": "^12.23.24",
     "geist": "^1.5.1",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.552.0",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
